--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "n_fold" : 0,
+    "n_fold" : 1,
     "dataset_folder" : "./TM40_Original",
     "norm_imgs_folder" : "/Norm_images/*",
     "gt_folder" : "/GT_images/*",
@@ -9,12 +9,12 @@
     "ORIGINAL_SIZE" : 512,
     "NEW_SIZE" : 256,
     "batch_size" : 4,
-    "epochs" : 3,
+    "epochs" : 10,
     "exec_folder_name" : "",
-    "title" : "Linknet_resnet34",
-    "model" : "linknet",
+    "title" : "unet_original",
+    "model" : "unet_original",
     "backbone_name" : "resnet34",
-    "callback" : "early_stopping",
+    "callback" : null,
     "monitor" : "val_loss",
     "verbose" : 0,
     "mode" : "min",
