--- a/config.json
+++ b/config.json
@@ -1,22 +1,26 @@
 {
-    "n_fold" : 1,
-    "dataset_folder" : "./TM40_Original",
-    "norm_imgs_folder" : "/Norm_images/*",
-    "gt_folder" : "/GT_images/*",
-    "output_folder" : "./TM40_46Prod",
-    "test_imgs_folder" : "/Producao/*",
-    "gt_test_folder" : "/GT_Producao/*",
+    "n_fold" : 4,
+    "dataset_folder" : "./lung_CTs/train",
+    "norm_imgs_folder" : "/lung_slices_train/*",
+    "gt_folder" : "/lung_gt_train/*",
+    "output_folder" : "./lung_CTs",
+    "test_imgs_folder" : "/test/lung_slices_test/*",
+    "gt_test_folder" : "/test/lung_gt_test/*",
     "ORIGINAL_SIZE" : 512,
     "NEW_SIZE" : 256,
+    "normalize" : 1,
     "batch_size" : 4,
-    "epochs" : 10,
-    "exec_folder_name" : "",
-    "title" : "unet_original",
-    "model" : "unet_original",
+    "epochs" : 80,
+    "exec_folder_name" : "Exec_2023-05-15-16-38-14.974785",
+    "title" : "unet_resnet34",
+    "model" : "unet",
     "backbone_name" : "resnet34",
-    "callback" : null,
+    "callback" : ["early_stopping", "reduce_lr_on_plateau"],
     "monitor" : "val_loss",
-    "verbose" : 0,
-    "mode" : "min",
-    "patience" : 10
+    "verbose_es" : 0,
+    "mode_es" : "min",
+    "patience_es" : 15,
+    "factor_lr" : 0.2,
+    "patience_lr" : 3,
+    "min_lr" : 0.001
 }
